--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ GITHUB_CLIENT_ID = Ov23liwZd32JxXQJ4ARu
 GITHUB_CLIENT_SECRET = 334a602627c7b73791d947cfaeeee69c6f73de42
 
 NEXTAUTH_SECRET = "asdfasdfasdfla;jslkgal;sdjljasdfa;sjgasdf"
-NEXTAUTH_URL = "http://localhost:3000"
+NEXTAUTH_URL = "https://lama-dev-smoky.vercel.app"
