--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/react": "18.3.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.15"
   }
